<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiveStarChickenLMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="new_assessment">New \n Assesment</string>
    <string name="register">Register</string>
    <string name="sync_data">Sync Data</string>
    <string name="logout">Logout</string>
    <string name="start_exam">Start Exam</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="take_exam">Take Exam</string>
    <string name="view_result">View result</string>
    <string name="contact_trainer">Contact Trainer</string>
    <string name="certificate">Certificate </string>
    <string name="new_update">New Updates</string>
    <string name="video_call">Video Call</string>
    <string name="manager_login">Manager Login</string>
    <string name="employee_login">Employee Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="passsward">Password</string>
    <string name="restore_data">Restore Data</string>
    <string name="update_data">Update Data</string>
    <string name="carrier_graph_string">Employee Carrier Graph</string>
    <string name="send_message">Send Message</string>
    <string name="contact_info">Contact Info</string>
    <string name="module_name">Module Name</string>
    <string name="percentage">Percentage</string>
    <string name="status">Status</string>
    <string name="restore_description">It will delete all local data</string>
    <string name="update_description">Update from last successful sync</string>
    <string name="send">Send</string>
    <string name="write_message_here">Write Message Here</string>
    <string name="duration">Duration</string>
    <string name="total_question">Total Question</string>
    <string name="passing_score">Passing Score</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="exam_date">Exam Date</string>
    <string name="questions_answered">Questions Answered</string>
    <string name="assessment">Assessment</string>
    <string name="exam_detail">Exam Detail</string>
    <string name="result">Result</string>
    <string name="tutorial">Tutorial</string>
     
   

    <array name="nav_drawer_icons">
        <item>@drawable/dash_board</item>
        <item>@drawable/profile_settings</item>
        <item>@drawable/results</item>
        <item>@drawable/view_icon</item>
        <item>@drawable/log_out</item>
    </array>

    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Profile View</item>
        <item>Take Exam</item>
        <item>View Result</item>
        <item>Logout</item>
    </string-array>

</resources>