<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lllogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/manager_login"
                android:textColor="#cb0101"
                android:textSize="20dp" />
            <!-- android:textColor="@android:color/black" -->

            <ImageView
                android:id="@+id/ivclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="3dp"
                android:src="@drawable/btn_cross" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etmanager_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etusername"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_test_style"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etmanager_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etusername"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_test_style"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/passsward"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20dp" />

        <Button
            android:id="@+id/employee_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/select_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            android:text="Login"
            android:textColor="#FFF200" />
 <!-- android:textColor="@android:color/white" -->
    </LinearLayout>

</LinearLayout>