<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:paddingBottom="5dp"
    android:background="@drawable/white_round_border"
    android:minWidth="400dp"
    android:orientation="vertical" >
    
     <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_info"
        android:textColor="@android:color/black"
        android:textSize="20dp" />
    
     <ImageView
                android:id="@+id/ivclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="3dp"
                android:src="@drawable/btn_cross" />
     </RelativeLayout>
     
        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/white"
                        android:orientation="horizontal"
                        android:padding="5dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.7"
                            android:gravity="center|left"
                            android:padding="3dp"
                            android:text="@string/email"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvemail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:textSize="15sp" >
                        </TextView>

                    </LinearLayout>
                    
        <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/white"
                        android:orientation="horizontal"
                        android:padding="5dp" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="0.7"
                            android:gravity="center|left"
                            android:padding="3dp"
                            android:text="@string/phone"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvphone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                          
                            android:textSize="15sp" >
                        </TextView>
                    </LinearLayout>
    
    
    </LinearLayout>