<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btsatrtexam"
        android:layout_below="@+id/tvtitle" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle"
                android:layout_margin="5dp"
                android:background="@drawable/blueborder_shape"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@color/maroonbackground"
                    android:gravity="center|left"
                    android:padding="5dp"
                    android:text=" Exam Summary"
                    android:textColor="@color/heading_color"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <!-- android:background="@color/bluebackground",android:textColor="@android:color/white" -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >
                         <TextView
                            
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:text="@string/module_name"
                            android:textStyle="bold" />
                             <TextView
                            
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                              android:text="@string/duration"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                                 <TextView
                            
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                             android:text="@string/total_question"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                                     <TextView
                            
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/passing_score"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvmodulename"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvduration"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvtotalquestion"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvpassingscore"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvtutorial"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/select_button"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="Tutorial"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvsatrtexam"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/select_button"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/take_exam"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>